// Copyright 2023 Ant Group Co., Ltd.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package scql.pb;

option go_package = "proto-gen/scql";

// Security config information
message SecurityConfig {
  message ColumnControl {
    // The code of party that the visibility applies to.
    string party_code = 1;

    enum Visibility {
      UNKNOWN = 0;
      // The column can be revealed at party_code.
      PLAINTEXT = 1;
      // The column or any column produced by it can NOT be revealed at
      // party_code. It can be used as condition in JOIN, WHERE, and GROUP BY.
      ENCRYPTED_ONLY = 2;
      // The column can be revealed at party_code if it is used as join key
      PLAINTEXT_AFTER_JOIN = 3;
      // The column can be revealed at party_code if it is used as group by key
      PLAINTEXT_AFTER_GROUP_BY = 4;
      // The column can be revealed at party_code, if and only if
      // it is the result of the comparison function e.g. select compare1 >
      // compare2 from t group by zip_code
      PLAINTEXT_AFTER_COMPARE = 5;
      // The column can be revealed at party_code, if and only if
      // it has been through a N to 1 mapping such as
      //     - Aggregation operation such as sum/min/max/avg/count, e.g.
      //          select avg(score) from t group by zip_code
      //          select avg(score) from t
      PLAINTEXT_AFTER_AGGREGATE = 6;
    }
    Visibility visibility = 2;

    // The database_name.table_name.column_name that the visibility applies to.
    string database_name = 3;
    string table_name = 4;
    string column_name = 5;
  }
  // Column control list. If a column (with a specific party) is not configured
  // in column control list. It is treated as visibility = ENCRYPTED_ONLY.
  repeated ColumnControl column_control_list = 1;
}
